[gd_scene load_steps=19 format=3 uid="uid://bvkhms068n6rx"]

[ext_resource type="Script" uid="uid://cvp6rfl75vgwl" path="res://scenes/game_object/snake_enemy/snake_enemy.gd" id="1_qct4f"]
[ext_resource type="PackedScene" uid="uid://c65806m5fijo2" path="res://scenes/component/death_component.tscn" id="2_4jk3l"]
[ext_resource type="PackedScene" uid="uid://7lgb1wrn5yt5" path="res://scenes/component/velocity_component.tscn" id="2_qgqx6"]
[ext_resource type="PackedScene" uid="uid://cypxhbxv6dqlt" path="res://scenes/component/health_component.tscn" id="2_ukqif"]
[ext_resource type="PackedScene" uid="uid://c0gxsvbrgvhdu" path="res://scenes/component/hurtbox_component.tscn" id="4_865ah"]
[ext_resource type="PackedScene" uid="uid://b8mlsflhn4gqe" path="res://scenes/component/hit_flash_component.tscn" id="5_74qiw"]
[ext_resource type="Shader" uid="uid://bqorsghqcufe5" path="res://scenes/component/hit_flash_component.gdshader" id="6_h4ano"]
[ext_resource type="PackedScene" uid="uid://bq2h0xvajr24r" path="res://scenes/component/spot_drop_component.tscn" id="7_rquut"]
[ext_resource type="AudioStream" uid="uid://cauva22o2byac" path="res://assets/sound/26_sword_hit_1.wav" id="8_qcjis"]
[ext_resource type="Texture2D" uid="uid://bcbqucubxgpg6" path="res://scenes/game_object/snake_enemy/snake_enemy.png" id="9_74qiw"]
[ext_resource type="AudioStream" uid="uid://c0mascfon4dct" path="res://assets/sound/26_sword_hit_2.wav" id="9_m5uot"]
[ext_resource type="AudioStream" uid="uid://ogetqg5x0sef" path="res://assets/sound/26_sword_hit_3.wav" id="10_lp6w6"]

[sub_resource type="Animation" id="Animation_sjtyn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_rquut"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.10472, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 1.1), Vector2(1.14, 0.86), Vector2(1, 1)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_is_moving"
}, {
"args": [false],
"method": &"set_is_moving"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_74qiw"]
_data = {
&"RESET": SubResource("Animation_sjtyn"),
&"walk": SubResource("Animation_rquut")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7kpoi"]
resource_local_to_scene = true
shader = ExtResource("6_h4ano")
shader_parameter/lerp_percent = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_865ah"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4jk3l"]
radius = 5.0

[node name="SnakeEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 9
motion_mode = 1
script = ExtResource("1_qct4f")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_74qiw")
}
autoplay = "walk"

[node name="HealthComponent" parent="." instance=ExtResource("2_ukqif")]
max_health = 20.0

[node name="SpotDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("7_rquut")]
drop_percent = 0.4
health_component = NodePath("../HealthComponent")

[node name="VelocityComponent" parent="." instance=ExtResource("2_qgqx6")]
max_speed = 80
acceleration = 40.0
deceleration = 50.0

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("5_74qiw")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_7kpoi")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("2_4jk3l")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")

[node name="HitRandomAudioPlayer" parent="DeathComponent" index="2"]
streams = Array[AudioStream]([ExtResource("8_qcjis"), ExtResource("9_m5uot"), ExtResource("10_lp6w6")])

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_865ah")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" parent="HurtboxComponent" index="0"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_865ah")
debug_color = Color(1.29953e-06, 0.638717, 0.374836, 0.42)

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("9_74qiw")
offset = Vector2(0, -10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_4jk3l")

[connection signal="hit" from="HurtboxComponent" to="VelocityComponent" method="on_hit"]

[editable path="DeathComponent"]
[editable path="HurtboxComponent"]
